Fixed some styling issues with search bar and advisors page
Fixed an issue where the search bar would sometimes go underneath the navbar if the window was resized too small.
Also fixed an issue where the background color on the advisors page would not extend all the way down to the bottom of the page.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,23 +13,29 @@
   background-color: #eeeeee;
 }
 
-.AdvisorsPage {
-  background-color: #eeeeee;
-}
-
-.AdvisorsPage .advisor {
-  line-height: 5px;
-  margin-top: 50px;
-}
-
-.search-bar-container {
-  padding-top: 20vh;
+.HomePage .search-bar-container {
+  padding-top: 0%;
   width: 40%;
   margin: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   min-width: 200px;
+}
+
+.AdvisorsPage {
+  background-color: #eeeeee;
+}
+
+.AdvisorsPage .Advisors {
+  margin-top: 50px;
+  background-color: #eeeeee;
+}
+
+.AdvisorsPage .advisor {
+  line-height: 5px;
+  height: 80px;
+  background-color: #eeeeee;
 }
 
 .App-logo {
